test/typechecker/pass/opaque_mod_members.fu
mod Foo {
    pub opaque type T = i32;
    pub const x : T = 4;
    pub fun f() -> T = 4;
    pub enum E { A(T) }
    pub struct S(T);
}
fun f() -> Foo.T = Foo.x + Foo.f();
fun g(x: Foo.T) -> Foo.E = Foo.E.A(x);
fun h(x: Foo.T) -> Foo.S = Foo.S(x);
