test/typechecker/fail/opaque_mod_members.fu
mod Foo {
    pub opaque type T = i32;
}
fun f() -> Foo.T = 4:i32;
